Move header to component

--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -206,7 +206,19 @@ body {
   height: 8.3rem; }
 
 .view {
-  max-width: 82rem; }
+  max-width: 82rem;
+  margin: 5rem auto;
+  background-color: white;
+  min-height: 180vh;
+  box-shadow: 0 0.4rem 1.8rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 767px) {
+    .view {
+      width: 100%;
+      margin: 0rem;
+      height: 100vh; } }
 
 .view--collapsed {
-  width: 80vh; }
+  height: 80vh; }
+  @media (max-width: 767px) {
+    .view--collapsed {
+      height: 100%; } }
