--- a/algolia_restaurant_search/src/App.scss
+++ b/algolia_restaurant_search/src/App.scss
@@ -1,4 +1,5 @@
 @import 'styles/globals/all.scss';
 @import 'styles/reset.scss';
 @import 'styles/base.scss';
+@import 'styles/layout.scss';
 @import 'styles/modules/all.scss';
