--- a/algolia_restaurant_search/src/styles/globals/_mixins_media.scss
+++ b/algolia_restaurant_search/src/styles/globals/_mixins_media.scss
@@ -1,7 +1,7 @@
 @import './media_breakpoints.scss';
 
 @mixin phone {
-  @media (max-width: #{$tablet-width - 1px}) {
+  @media (max-width: #{$tablet-min-width - 1px}) {
     @content;
   }
 }
@@ -11,13 +11,13 @@
 /////////////////
 
 @mixin tablet {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+  @media (min-width: #{$tablet-min-width}) and (max-width: #{$desktop-min-width - 1px}) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media (min-width: #{$desktop-width}) {
+  @media (min-width: #{$desktop-min-width}) {
     @content;
   }
 }
