--- a/algolia_restaurant_search/src/styles/modules/_view.scss
+++ b/algolia_restaurant_search/src/styles/modules/_view.scss
@@ -1,7 +1,21 @@
 .view {
   max-width: 82rem;
+  margin: 5rem auto;
+  background-color: white;
+  min-height: 180vh;
+  box-shadow: 0 0.4rem 1.8rem rgba(0,0,0,0.2);
+
+  @include phone {
+    width: 100%;
+    margin: 0rem;
+    height: 100vh;
+  }
 }
 
 .view--collapsed {
-  width: 80vh;
+  height: 80vh;
+
+  @include phone {
+    height: 100%;
+  }
 }
