--- a/algolia_restaurant_search/src/styles/modules/_view.scss
+++ b/algolia_restaurant_search/src/styles/modules/_view.scss
@@ -1,21 +1,17 @@
 .view {
+  position: relative;
   max-width: 82rem;
+  width: 100vw;
   margin: 5rem auto;
+  padding-top: 8.3rem;
   background-color: white;
   min-height: 180vh;
   box-shadow: 0 0.4rem 1.8rem rgba(0,0,0,0.2);
 
   @include phone {
-    width: 100%;
+    max-width: 100vw;
     margin: 0rem;
     height: 100vh;
   }
 }
 
-.view--collapsed {
-  height: 80vh;
-
-  @include phone {
-    height: 100%;
-  }
-}
