Revise sticky header solution

--- a/algolia_restaurant_search/src/styles/modules/_header.scss
+++ b/algolia_restaurant_search/src/styles/modules/_header.scss
@@ -1,9 +1,5 @@
 .header {
-  position: absolute;
-  position: sticky;
-  top: 0rem;
   background: #1C688E;
-  width: inherit;
-  max-width: inherit;
+  width: 100%;
   height: 8.3rem;
 }
