--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -202,20 +202,14 @@ body {
   background-attachment: fixed; }
 
 .header {
-  position: absolute;
-  position: sticky;
-  top: 0rem;
   background: #1C688E;
-  width: inherit;
-  max-width: inherit;
+  width: 100%;
   height: 8.3rem; }
 
 .view {
-  position: relative;
   max-width: 82rem;
   width: 100vw;
   margin: 5rem auto;
-  padding-top: 8.3rem;
   background-color: white;
   min-height: 180vh;
   box-shadow: 0 0.4rem 1.8rem rgba(0, 0, 0, 0.2); }
@@ -224,10 +218,6 @@ body {
       max-width: 100vw;
       margin: 0rem;
       height: 100vh; } }
-
-.header--sticky {
-  position: fixed;
-  position: sticky; }
 
 .view--collapsed {
   height: 80vh; }
