--- a/algolia_restaurant_search/src/styles/modules/_header.scss
+++ b/algolia_restaurant_search/src/styles/modules/_header.scss
@@ -2,4 +2,34 @@
   background: #1C688E;
   width: 100%;
   height: 8.3rem;
+  padding: 2.2rem 2.5rem;
+}
+
+.header__input {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #D6D6D6;
+  border-radius: 0.3rem;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  color: #666;
+  padding: 1.3rem;
+  font-weight: 100;
+
+  @mixin placeholder {
+    color: #B3B3B3;
+  }
+
+  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    @include placeholder;
+  }
+  &::-moz-placeholder { /* Firefox 19+ */
+    @include placeholder;
+  }
+  &:-ms-input-placeholder { /* IE 10+ */
+    @include placeholder;
+  }
+  &:-moz-placeholder { /* Firefox 18- */
+    @include placeholder;
+  }
 }
