--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -231,6 +231,7 @@ body {
     color: #B3B3B3; }
 
 .view {
+  position: relative;
   max-width: 82rem;
   width: 100vw;
   margin: 5rem auto;
@@ -242,6 +243,33 @@ body {
       max-width: 100vw;
       margin: 0rem;
       height: 100vh; } }
+
+.content {
+  position: absolute;
+  top: 8.3rem;
+  bottom: 0rem;
+  width: 100%; }
+
+.sidebar {
+  position: absolute;
+  top: 0rem;
+  left: 0rem;
+  bottom: 0rem;
+  width: 20.7rem;
+  border-right: 1px solid #E6E6E6;
+  overflow: hidden; }
+  .sidebar:hover {
+    overflow-y: auto; }
+    .sidebar:hover::-webkit-scrollbar {
+      width: 1.2rem; }
+    .sidebar:hover::-webkit-scrollbar-track {
+      border-radius: 1.2rem;
+      background-color: transparent;
+      -webkit-box-shadow: inset 0 0 0 0.3rem white; }
+    .sidebar:hover::-webkit-scrollbar-thumb {
+      border: 0.3rem solid white;
+      border-radius: 0.6rem;
+      background-color: #D9D9DE; }
 
 .view--collapsed {
   height: 80vh; }
