Add styles to sidebar

--- a/algolia_restaurant_search/src/styles/modules/_all.scss
+++ b/algolia_restaurant_search/src/styles/modules/_all.scss
@@ -2,3 +2,5 @@
 @import './view.scss';
 @import './content.scss';
 @import './sidebar.scss';
+@import './sidebar_section.scss';
+@import './sidebar_section_item.scss';
