--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -195,7 +195,8 @@ input[type=button] {
   clear: both; }
 
 html {
-  font-size: 10px; }
+  font-size: 10px;
+  font-family: Helvetica, Arial, sans-serif; }
 
 body {
   background-image: url("./resources/graphics/background.png");
@@ -212,7 +213,6 @@ body {
   height: 100%;
   border: 1px solid #D6D6D6;
   border-radius: 0.3rem;
-  font-family: Helvetica, Arial, sans-serif;
   font-size: 15px;
   color: #666;
   padding: 1.3rem;
@@ -257,9 +257,11 @@ body {
   bottom: 0rem;
   width: 20.7rem;
   border-right: 1px solid #E6E6E6;
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 2.8rem 2.3rem; }
   .sidebar:hover {
-    overflow-y: auto; }
+    overflow-y: auto;
+    padding-right: 1.1rem; }
     .sidebar:hover::-webkit-scrollbar {
       width: 1.2rem; }
     .sidebar:hover::-webkit-scrollbar-track {
@@ -270,6 +272,36 @@ body {
       border: 0.3rem solid white;
       border-radius: 0.6rem;
       background-color: #D9D9DE; }
+
+.sidebar-section {
+  margin-bottom: 2.3rem; }
+
+.sidebar-section__heading {
+  line-height: 1.7rem;
+  font-size: 1.4rem;
+  color: #333;
+  font-weight: 300;
+  margin-bottom: 0.9rem; }
+
+.sidebar-section-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.2rem 1.4rem 0.2rem 1.1rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin: 0.1rem 0; }
+  .sidebar-section-item:hover {
+    background-color: #2897C5; }
+    .sidebar-section-item:hover span {
+      color: white; }
+
+.sidebar-section-item__type {
+  font-size: 1.3rem; }
+
+.sidebar-section-item__count {
+  font-size: 1.3rem;
+  color: #9a9a9a;
+  font-weight: 300; }
 
 .view--collapsed {
   height: 80vh; }
