--- a/algolia_restaurant_search/src/styles/modules/_sidebar.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar.scss
@@ -8,11 +8,15 @@
   width: 20.7rem;
   border-right: 1px solid #E6E6E6;
   overflow: hidden;
-  padding: 2.8rem 2.3rem;
+  padding: 3rem 2.3rem;
 
   &:hover {
     @include scrollable_light_bg;
     padding-right: 1.1rem;
   }
 
+}
+
+.sidebar-section__list {
+  cursor: pointer;
 }
