--- a/algolia_restaurant_search/src/styles/_base.scss
+++ b/algolia_restaurant_search/src/styles/_base.scss
@@ -7,3 +7,8 @@ body {
   background-image: url('./resources/graphics/background.png');
   background-attachment: fixed
 }
+
+button {
+  border: none;
+  background-color: transparent;
+}
