--- a/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
@@ -3,10 +3,10 @@
   justify-content: space-between;
   padding: 0.2rem 1.4rem 0.2rem 1.1rem;
   border-radius: 0.3rem;
-  cursor: pointer;
+  width: 100%;
   margin: 0.1rem 0;
 
-  &:hover {
+  &:hover, &--selected {
     background-color: #2897C5;
 
     & span {
