--- a/algolia_restaurant_search/src/styles/modules/_all.scss
+++ b/algolia_restaurant_search/src/styles/modules/_all.scss
@@ -4,3 +4,5 @@
 @import './sidebar.scss';
 @import './sidebar_section.scss';
 @import './sidebar_section_item.scss';
+@import './star_rating.scss';
+@import './results.scss';
