--- a/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
@@ -1,4 +1,5 @@
 .sidebar-section-item {
+  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 0.2rem 1.4rem 0.2rem 1.1rem;
