--- a/algolia_restaurant_search/src/styles/modules/_star_rating.scss
+++ b/algolia_restaurant_search/src/styles/modules/_star_rating.scss
@@ -1,5 +1,10 @@
+.star-rating {
+  position: relative;
+  vertical-align: baseline;
+  height: 1.5rem;
+}
+
 .stars {
-  margin: 0.2rem 1.1rem;
   position: absolute;
   top: 0rem;
   left: 0rem;
