--- a/algolia_restaurant_search/src/styles/modules/_results_item.scss
+++ b/algolia_restaurant_search/src/styles/modules/_results_item.scss
@@ -29,12 +29,29 @@
   font-size: 1.6rem;
 }
 
+.results-item__line {
+  margin-top: 0.7rem;
+}
+
 .results-item__rating {
   color: #FFAB66;
   line-height: 2rem;
   font-size: 1.4rem;
   vertical-align: middle;
-  margin-right: 0.4rem;
+  margin-right: 0.8rem;
+}
+
+.results-item__review-count {
+  vertical-align: middle;
+  color: rgba(112,112,112,0.6);
+  font-size: 1.4rem;
+  margin-left: 0.8rem;
+  font-weight: 300;
 }
 
 
+.results-item__description {
+  color: rgba(112,112,112,0.6);
+  font-size: 1.4rem;
+  font-weight: 300;
+}
