Add styles for expanding content

--- a/algolia_restaurant_search/src/styles/modules/_content.scss
+++ b/algolia_restaurant_search/src/styles/modules/_content.scss
@@ -1,6 +1,5 @@
 .content {
-  position: absolute;
-  top: 8.3rem;
-  bottom: 0rem;
+  position: relative;
+  min-height: calc(80vh - 8.3rem);
   width: 100%;
 }
