--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -50,9 +50,6 @@ embed {
 }
 */
 /* force a vertical scrollbar to prevent a jumpy page */
-html {
-  overflow-y: scroll; }
-
 /* we use a lot of ULs that aren't bulleted.
 	you'll have to restore the bullets within content,
 	which is fine because they're probably customized anyway */
@@ -196,8 +193,7 @@ input[type=button] {
 
 html {
   font-size: 10px;
-  font-family: Helvetica, Arial, sans-serif;
-  overflow: hidden; }
+  font-family: Helvetica, Arial, sans-serif; }
 
 body {
   background-image: url("./resources/graphics/background.png");
@@ -216,7 +212,8 @@ a {
   background: #1C688E;
   width: 100%;
   height: 8.3rem;
-  padding: 2.2rem 2.5rem; }
+  padding: 2.2rem 2.5rem;
+  z-index: 20; }
 
 .header__input {
   width: 100%;
@@ -255,9 +252,8 @@ a {
       height: 100vh; } }
 
 .content {
-  position: absolute;
-  top: 8.3rem;
-  bottom: 0rem;
+  position: relative;
+  min-height: calc(80vh - 8.3rem);
   width: 100%; }
 
 .sidebar {
@@ -350,7 +346,7 @@ a {
   padding: 3rem 2.4rem 1.7rem 23.1rem;
   width: 100%;
   box-sizing: border-box;
-  height: 100%; }
+  min-height: calc(80vh - 8.3rem); }
 
 .results__info {
   display: inline-block;
@@ -436,9 +432,3 @@ a {
   color: rgba(112, 112, 112, 0.6);
   font-size: 1.4rem;
   font-weight: 300; }
-
-.view--collapsed {
-  height: 80vh; }
-  @media (max-width: 867px) {
-    .view--collapsed {
-      height: 100%; } }
