--- a/algolia_restaurant_search/src/styles/modules/_results.scss
+++ b/algolia_restaurant_search/src/styles/modules/_results.scss
@@ -5,7 +5,7 @@
   padding: 3rem 2.4rem 1.7rem 23.1rem;
   width: 100%;
   box-sizing: border-box;
-  height: 100%;
+  min-height: calc(80vh - 8.3rem);
 }
 
 .results__info {
