--- a/algolia_restaurant_search/src/styles/globals/_mixins.scss
+++ b/algolia_restaurant_search/src/styles/globals/_mixins.scss
@@ -17,3 +17,10 @@
     background-color: #D9D9DE;
   }
 }
+
+@mixin overflow-ellipses {
+  width: 100%;
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+}
