--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -392,7 +392,8 @@ a {
   cursor: pointer;
   border-radius: 0.4rem;
   border: 1px solid transparent;
-  margin: 0.3rem 0; }
+  margin: 0.3rem 0;
+  white-space: nowrap; }
   .results-item:hover {
     background-color: #c6e6f3;
     border: 1px solid #71c1e2; }
@@ -404,12 +405,17 @@ a {
 
 .results-item__info {
   display: inline-block;
+  width: calc(100% - 9.7rem);
   margin-left: 1.7rem;
   vertical-align: top; }
 
 .results-item__name {
   line-height: 1.9rem;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  width: 100%;
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow-x: hidden; }
 
 .results-item__line {
   margin-top: 0.7rem; }
@@ -431,4 +437,8 @@ a {
 .results-item__description {
   color: rgba(112, 112, 112, 0.6);
   font-size: 1.4rem;
-  font-weight: 300; }
+  font-weight: 300;
+  width: 100%;
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow-x: hidden; }
