--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -247,9 +247,9 @@ a {
   box-shadow: 0 0.4rem 1.8rem rgba(0, 0, 0, 0.2); }
   @media (max-width: 867px) {
     .view {
-      max-width: 100vw;
+      width: 100%;
       margin: 0rem;
-      height: 100vh; } }
+      min-height: 100vh; } }
 
 .content {
   position: relative;
