--- a/algolia_restaurant_search/src/styles/modules/_view.scss
+++ b/algolia_restaurant_search/src/styles/modules/_view.scss
@@ -8,9 +8,9 @@
   box-shadow: 0 0.4rem 1.8rem rgba(0,0,0,0.2);
 
   @include phone {
-    max-width: 100vw;
+    width: 100%;
     margin: 0rem;
-    height: 100vh;
+    min-height: 100vh;
   }
 }
 
