--- a/algolia_restaurant_search/src/styles/modules/_header.scss
+++ b/algolia_restaurant_search/src/styles/modules/_header.scss
@@ -15,6 +15,11 @@
   color: #666;
   padding: 1.3rem;
   font-weight: 100;
+  vertical-align: middle;
+
+  @include phone {
+    width: calc(100% - 4.3rem);
+  }
 
   @mixin placeholder {
     color: #B3B3B3;
