--- a/algolia_restaurant_search/src/styles/modules/_view.scss
+++ b/algolia_restaurant_search/src/styles/modules/_view.scss
@@ -1,14 +1,14 @@
 .view {
   position: relative;
   max-width: 82rem;
-  width: 100vw;
+  width: 100%;
   margin: 5rem auto;
   background-color: white;
   min-height: 80vh;
   box-shadow: 0 0.4rem 1.8rem rgba(0,0,0,0.2);
 
   @include phone {
-    width: 100%;
+    max-width: unset;
     margin: 0rem;
     min-height: 100vh;
   }
