--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -289,7 +289,10 @@ a {
     .sidebar {
       position: fixed;
       top: 8.3rem;
-      left: 0rem; } }
+      left: 0rem;
+      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+      transition: transform 200ms ease;
+      transform: translateX(-100%); } }
 
 .sidebar-section__list {
   cursor: pointer; }
@@ -474,3 +477,6 @@ a {
 .menu-button__svg {
   margin-top: -0.3rem;
   fill: white; }
+
+.sidebar--open {
+  transform: translateX(0%); }
