--- a/algolia_restaurant_search/src/styles/modules/_sidebar.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar.scss
@@ -21,6 +21,9 @@
     position: fixed;
     top: 8.3rem;
     left: 0rem;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
+    transition: transform 200ms ease;
+    transform: translateX(-100%);
   }
 }
 
