--- a/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
@@ -18,6 +18,11 @@
       color: white;
     }
   }
+
+  @include phone {
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+  }
 }
 
 .sidebar-section-item__type {
