--- a/src/styles/modules/_sidebar_section_item.scss
+++ b/src/styles/modules/_sidebar_section_item.scss
@@ -19,9 +19,17 @@
     }
   }
 
-  @include phone {
+  @mixin large-buttons {
     padding-top: 1.2rem;
     padding-bottom: 1.2rem;
+  }
+
+  @include tablet {
+    @include large-buttons;
+  }
+
+  @include phone {
+    @include large-buttons;
   }
 }
 
