--- a/src/styles/modules/_results_item.scss
+++ b/src/styles/modules/_results_item.scss
@@ -17,7 +17,7 @@
   }
 
   @include phone {
-    &:hover {
+    &:hover, &:focus {
       background-color: unset;
       border: 1px solid transparent;
     }
