--- a/src/styles/state/_sidebar.scss
+++ b/src/styles/state/_sidebar.scss
@@ -3,6 +3,7 @@
 
   @include phone {
     & + .results .results-item {
+      cursor: default;
       -webkit-tap-highlight-color: rgba(0,0,0,0);
       -webkit-tap-highlight-color: transparent;
     }
