--- a/src/App.css
+++ b/src/App.css
@@ -269,8 +269,7 @@ a {
   border-right: 1px solid #E6E6E6;
   overflow: hidden;
   padding: 3rem 2.3rem;
-  background-color: white;
-  z-index: 20; }
+  background-color: white; }
   @media (min-width: 1024px) {
     .sidebar:hover {
       overflow-y: auto;
@@ -294,7 +293,8 @@ a {
       box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
       transition: transform 200ms ease;
       transform: translateX(-100%);
-      overflow-y: scroll; } }
+      overflow-y: scroll;
+      z-index: 20; } }
   @media (min-width: 868px) and (max-width: 1023px) {
     .sidebar {
       overflow-y: scroll; } }
