--- a/src/styles/modules/_sidebar_section_item.scss
+++ b/src/styles/modules/_sidebar_section_item.scss
@@ -7,7 +7,8 @@
   width: 16rem;
   margin: 0.1rem 0;
 
-  &:hover {
+  &:hover, &:focus {
+    outline: 0;
     background-color: lighten($color: #2897C5, $amount: 40%);
   }
 
