--- a/src/styles/modules/_sidebar_section_item.scss
+++ b/src/styles/modules/_sidebar_section_item.scss
@@ -7,8 +7,7 @@
   width: 16rem;
   margin: 0.1rem 0;
 
-  &:hover, &:focus {
-    outline: 0;
+  &:hover {
     background-color: lighten($color: #2897C5, $amount: 40%);
   }
 
